#742: add geolocation setting
WebUiDriver now returns CustomEventFiringWebDriver instead of WebDriver